--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,6 +1,34 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c7cbad">  <td>21/08/10 13:50:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp([Ljava.lang.Object;)[pri:0, instance:com.common.qa.testcases.DCTQuickQuoteTest1@464bee09]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>TestNG-PoolService-0@764918755</td>   <td></td> </tr>
+<tr bgcolor="c7cbad">  <td>21/08/10 15:17:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp([Ljava.lang.Object;)[pri:0, instance:com.common.qa.testcases.DCTQuickQuoteTest1@464bee09]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>TestNG-PoolService-0@46476884</td>   <td></td> </tr>
+<tr bgcolor="c7cbad">  <td>21/08/10 15:17:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp([Ljava.lang.Object;)[pri:0, instance:com.common.qa.testcases.DCTQuickQuoteTest2@f6c48ac]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>TestNG-PoolService-0@1504094428</td>   <td></td> </tr>
+<tr bgcolor="82f6ef">  <td>21/08/10 15:17:28</td>   <td>8687</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DCTQuickQuoteTest1.QuickQuoteFlowTest1(java.util.Map)[pri:0, instance:com.common.qa.testcases.DCTQuickQuoteTest1@464bee09]">QuickQuoteFlowTest1</td> 
+  <td>TestNG-PoolService-0@46476884</td>   <td></td> </tr>
+<tr bgcolor="6fc185">  <td>21/08/10 15:17:29</td>   <td>9075</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DCTQuickQuoteTest2.QuickQuoteFlowTest2(java.util.Map)[pri:0, instance:com.common.qa.testcases.DCTQuickQuoteTest2@f6c48ac]">QuickQuoteFlowTest2</td> 
+  <td>TestNG-PoolService-0@1504094428</td>   <td></td> </tr>
+<tr bgcolor="c7cbad">  <td>21/08/10 15:17:56</td>   <td>36060</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.common.qa.testcases.DCTQuickQuoteTest2@f6c48ac]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>TestNG-PoolService-0@1504094428</td>   <td></td> </tr>
+<tr bgcolor="c7cbad">  <td>21/08/10 15:17:56</td>   <td>36721</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.common.qa.testcases.DCTQuickQuoteTest1@464bee09]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>TestNG-PoolService-0@46476884</td>   <td></td> </tr>
+<tr bgcolor="c7cbad">  <td>21/08/10 15:17:57</td>   <td>37259</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp([Ljava.lang.Object;)[pri:0, instance:com.common.qa.testcases.DCTQuickQuoteTest3@13deb50e]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>TestNG-PoolService-0@261870750</td>   <td></td> </tr>
+<tr bgcolor="c7cbad">  <td>21/08/10 15:17:58</td>   <td>38343</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp([Ljava.lang.Object;)[pri:0, instance:com.common.qa.testcases.DCTQuickQuoteTest4@239963d8]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>TestNG-PoolService-0@162428488</td>   <td></td> </tr>
+<tr bgcolor="9b7d71">  <td>21/08/10 15:18:01</td>   <td>41802</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DCTQuickQuoteTest3.QuickQuoteFlowTest3(java.util.Map)[pri:0, instance:com.common.qa.testcases.DCTQuickQuoteTest3@13deb50e]">QuickQuoteFlowTest3</td> 
+  <td>TestNG-PoolService-0@261870750</td>   <td></td> </tr>
+<tr bgcolor="f5e5e3">  <td>21/08/10 15:18:04</td>   <td>44775</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DCTQuickQuoteTest4.QuickQuoteFlowTest4(java.util.Map)[pri:0, instance:com.common.qa.testcases.DCTQuickQuoteTest4@239963d8]">QuickQuoteFlowTest4</td> 
+  <td>TestNG-PoolService-0@162428488</td>   <td></td> </tr>
+<tr bgcolor="c7cbad">  <td>21/08/10 15:18:29</td>   <td>69452</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.common.qa.testcases.DCTQuickQuoteTest4@239963d8]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>TestNG-PoolService-0@162428488</td>   <td></td> </tr>
+<tr bgcolor="c7cbad">  <td>21/08/10 15:18:30</td>   <td>70189</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.common.qa.testcases.DCTQuickQuoteTest3@13deb50e]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>TestNG-PoolService-0@261870750</td>   <td></td> </tr>
+<tr bgcolor="c7cbad">  <td>21/08/10 15:18:30</td>   <td>70694</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp([Ljava.lang.Object;)[pri:0, instance:com.common.qa.testcases.DCTQuickQuoteTest5@3abbfa04]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>TestNG-PoolService-0@352647062</td>   <td></td> </tr>
+<tr bgcolor="6dabbc">  <td>21/08/10 15:18:34</td>   <td>74505</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DCTQuickQuoteTest5.QuickQuoteFlowTest5(java.util.Map)[pri:0, instance:com.common.qa.testcases.DCTQuickQuoteTest5@3abbfa04]">QuickQuoteFlowTest5</td> 
+  <td>TestNG-PoolService-0@352647062</td>   <td></td> </tr>
+<tr bgcolor="c7cbad">  <td>21/08/10 15:18:57</td>   <td>98015</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.common.qa.testcases.DCTQuickQuoteTest5@3abbfa04]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>TestNG-PoolService-0@352647062</td>   <td></td> </tr>
 </table>
